retrieving github issues